--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,34 +1,43 @@
-.login{
-    height: 100vh;
+.login {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  form {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 
-    form{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    input {
+      width: 200px;
+      height: 30px;
+      margin: 10px;
+    }
 
-      input{
-        width: 200px;
-        height: 30px;
-        margin: 10px;
-      }
+    button {
+      width: 200px;
+      height: 30px;
+      border: none;
+      background-color: brown;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      margin-bottom: 10px;
+    }
 
-      button{
-        width: 200px;
-        height: 30px;
-        border: none;
-        background-color: brown;
-        color: white;
-        font-weight: bold;
+    span {
+      font-size: 12px;
+      color: red;
+      margin-top: 10px;
+    }
+
+    .dark-mode-toggle {
+      margin-top: 10px;
+      
+      .icon {
         cursor: pointer;
       }
-
-      span{
-        font-size: 12px;
-        color: red;
-        margin-top: 10px;
-      }
     }
+  }
 }
